--- a/src/server/.env
+++ b/src/server/.env
@@ -1,1 +1,2 @@
 PORT=7001
+CONNECTION_STRING=mongodb+srv://admin_peskypooch:1234Qwer@peskypoochdb-oy3kg.mongodb.net/test?retryWrites=true&w=majority
