--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "config": "^3.2.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.9"
   },
