--- a/src/client/package.json
+++ b/src/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
@@ -30,5 +31,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
+    "cypress": "^3.8.2",
+    "react-bootstrap": "^1.0.0-beta.16"
   }
 }
