Changed start script to test deployment

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,7 @@
   "description": "Pesky Pooch T3A2",
   "main": "server.js",
   "scripts": {
-    "start": "npm install nodemon && nodemon server.js",
+    "start": "node server.js",
     "app": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
