--- a/src/server/package.json
+++ b/src/server/package.json
@@ -17,6 +17,9 @@
     "mongoose": "^5.8.9"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.0.0",
     "nodemon": "^2.0.2"
   },
   "engines": {
