--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,6 +11,7 @@
   "author": "Coen Drexler, Nick Fletcher, Dale Paulsen",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.5",
     "express": "^4.17.1",
@@ -20,7 +21,8 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^7.0.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "should": "^13.2.3"
   },
   "engines": {
     "node": "10.18.1"
