--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^11.0.1",
     "config": "^3.2.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.9"
