--- a/src/server/package.json
+++ b/src/server/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.9",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
