--- a/src/server/package.json
+++ b/src/server/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "jest": "^24.9.0",
     "mocha": "^7.0.0",
+    "mongodb-memory-server": "^6.2.3",
     "nodemon": "^2.0.2",
     "should": "^13.2.3"
   },
