Set test, dev, and main/production server scripts

--- a/src/server/.env
+++ b/src/server/.env
@@ -1,2 +1,5 @@
-PORT=7001
-CONNECTION_STRING=mongodb+srv://admin_peskypooch:1234Qwer@peskypoochdb-oy3kg.mongodb.net/test?retryWrites=true&w=majority
+PORT=7002
+CONNECTION_STRING_PT1=mongodb+srv://admin_peskypooch:1234Qwer@peskypoochdb-oy3kg.mongodb.net/
+DEV_CONNECTION_STRING=dev_database?retryWrites=true&w=majority
+MAIN_CONNECTION_STRING=main_database?retryWrites=true&w=majority
+TEST_CONNECTION_STRING=test_database?retryWrites=true&w=majority
