--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,7 +4,8 @@
   "description": "Pesky Pooch T3A2",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js MAIN",
+    "dev": "nodemon server.js DEV",
     "app": "nodemon server.js",
     "test": "mocha"
   },
@@ -13,7 +14,9 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
+    "commander": "^4.1.0",
     "config": "^3.2.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.9"
   },
