--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,6 +12,7 @@
   "author": "Coen Drexler, Nick Fletcher, Dale Paulsen",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^11.0.1",
@@ -19,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsdom": "^16.0.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
