changed mocha json settings to allow cleaner cli output

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js MAIN",
     "dev": "nodemon server.js DEV",
     "app": "nodemon server.js",
-    "test": "mocha"
+    "test": "mocha || true"
   },
   "author": "Coen Drexler, Nick Fletcher, Dale Paulsen",
   "license": "ISC",
