--- a/src/server/package.json
+++ b/src/server/package.json
@@ -27,11 +27,12 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "commander": "^4.1.0",
     "jest": "^24.9.0",
     "mocha": "^7.0.0",
     "nodemon": "^2.0.2",
-    "commander": "^4.1.0",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "sinon": "^8.1.1"
   },
   "engines": {
     "node": "10.18.1"
