--- a/src/server/package.json
+++ b/src/server/package.json
@@ -31,8 +31,7 @@
     "jest": "^24.9.0",
     "mocha": "^7.0.0",
     "nodemon": "^2.0.2",
-    "should": "^13.2.3",
-    "sinon": "^8.1.1"
+    "should": "^13.2.3"
   },
   "engines": {
     "node": "10.18.1"
