cloudinary implemented for image uploading

--- a/src/server/.env
+++ b/src/server/.env
@@ -4,3 +4,4 @@ DEV_CONNECTION_STRING=dev_database?retryWrites=true&w=majority
 MAIN_CONNECTION_STRING=main_database?retryWrites=true&w=majority
 TEST_CONNECTION_STRING=test_database?retryWrites=true&w=majority
 SECRETORKEY=secretkey
+CLOUDINARY_URL=cloudinary://514452994947154:P3KZ5SQDCxVpbicOBFjSS0ytjGQ@nickfis
