--- a/src/server/package.json
+++ b/src/server/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "celebrate": "^11.0.1",
+    "cloudinary": "^1.19.0",
     "config": "^3.2.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -23,6 +24,7 @@
     "jsdom": "^16.0.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
