--- a/src/server/package.json
+++ b/src/server/package.json
@@ -23,6 +23,7 @@
     "jsdom": "^16.0.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
