--- a/src/server/.env
+++ b/src/server/.env
@@ -4,3 +4,4 @@ DEV_CONNECTION_STRING=dev_database?retryWrites=true&w=majority
 MAIN_CONNECTION_STRING=main_database?retryWrites=true&w=majority
 TEST_CONNECTION_STRING=test_database?retryWrites=true&w=majority
 SECRETORKEY=secretkey
+CLOUDINARY_SECRET=6UNul8uQLp3pwzaU50C6QcsbsJk
