--- a/src/server/package.json
+++ b/src/server/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^1.19.0",
     "config": "^3.2.5",
     "cors": "^2.8.5",
+    "datauri": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.0.1",
