--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bulma": "^0.8.0",
     "cloudinary-react": "^1.3.0",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
